Fixed top container overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body {
     text-align: center;
     margin: 0;
     align-items: center;
+    overflow-x: hidden;
 }
 h1{
     font-family: 'Italiana', sans-serif;
